@@ -2755,6 +2755,13 @@ acl localdom dstdomain .%%nom_domaine_local
 always_direct allow localdom
 %if %%nom_cache_pere != ''
 always_direct allow localdest
+%if %%proxy_pere_rvp == non
+%if %%adresse_network_zone_rvp != ['']
+%for %%net in %%adresse_network_zone_rvp
+always_direct allow rvpdom%%net.index
+%end for
+%end if
+%end if
 never_direct allow all
 %end if
 ##
